[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/popup/ConnectionFailPopup.gd" type="Script" id=1]
[ext_resource path="res://art/login/LoginBG.png" type="Texture" id=2]
[ext_resource path="res://art/login/New Popup.png" type="Texture" id=3]
[ext_resource path="res://art/login/WifiLogo.png" type="Texture" id=4]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/login/Retry.png" type="Texture" id=6]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=7]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 12
extra_spacing_bottom = -3
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "bottomToTop"
tracks/0/type = "value"
tracks/0/path = NodePath("popup:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 36.5, 900 ), Vector2( 36.5, 148 ), Vector2( 36.5, 168 ) ]
}

[node name="ConnectionFailPopup" type="Control"]
modulate = Color( 0.972549, 0.972549, 0.972549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="popup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -165.5
margin_right = 151.5
margin_bottom = 165.5
texture = ExtResource( 3 )

[node name="wifilogo" type="TextureRect" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -123.5
margin_right = 107.5
margin_bottom = 95.5
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 107.048, 0.495697 )
texture = ExtResource( 4 )

[node name="title" type="Label" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.5
margin_top = 1.5
margin_right = 32.5
margin_bottom = 26.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.792157, 0.113725, 1 )
text = "Whoops!"
align = 1

[node name="message" type="Label" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.5
margin_top = 32.5
margin_right = 111.5
margin_bottom = 77.5
custom_fonts/font = SubResource( 2 )
text = "No internet connection found,
Please check your internet settings."
align = 1

[node name="btnRetry" type="Button" parent="popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.2465
margin_top = -87.4295
margin_right = 276.754
margin_bottom = 60.5705
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="btnClose" type="Button" parent="popup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = -14.0
margin_right = 47.0
margin_bottom = 87.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bottomToTop = SubResource( 3 )

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="popup/btnRetry" to="." method="_on_btnRetry_pressed"]
[connection signal="pressed" from="popup/btnClose" to="." method="_on_btnClose_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
